[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 484.0
margin_top = 290.0
margin_right = 539.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cookie" type="Button" parent="Buttons"]
margin_right = 94.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Cookie"

[node name="Baker" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Baker"

[node name="Factory" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Factory"

[node name="City" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 94.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 55, 20 )
text = "City"

[node name="State" type="Button" parent="Buttons"]
margin_top = 96.0
margin_right = 94.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 55, 20 )
text = "State"

[node name="Nation" type="Button" parent="Buttons"]
margin_top = 120.0
margin_right = 94.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Nation"

[node name="Planet" type="Button" parent="Buttons"]
margin_top = 144.0
margin_right = 94.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Planet"

[node name="Solar System" type="Button" parent="Buttons"]
margin_top = 168.0
margin_right = 94.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Solar System"

[node name="Galaxy" type="Button" parent="Buttons"]
margin_top = 192.0
margin_right = 94.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Galaxy"

[node name="Universe" type="Button" parent="Buttons"]
margin_top = 216.0
margin_right = 94.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( 55, 20 )
text = "Universe"

[node name="Information" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Information output"

[connection signal="pressed" from="Buttons/Cookie" to="." method="_on_Cookie_Button_pressed"]
[connection signal="pressed" from="Buttons/Baker" to="." method="_on_Baker_Button_pressed"]
[connection signal="pressed" from="Buttons/Factory" to="." method="_on_Factory_pressed"]
[connection signal="pressed" from="Buttons/City" to="." method="_on_City_pressed"]
[connection signal="pressed" from="Buttons/State" to="." method="_on_State_pressed"]
[connection signal="pressed" from="Buttons/Nation" to="." method="_on_Nation_pressed"]
[connection signal="pressed" from="Buttons/Planet" to="." method="_on_Planet_pressed"]
[connection signal="pressed" from="Buttons/Solar System" to="." method="_on_Solar_System_pressed"]
[connection signal="pressed" from="Buttons/Galaxy" to="." method="_on_Galaxy_pressed"]
[connection signal="pressed" from="Buttons/Universe" to="." method="_on_Universe_pressed"]
